--- a/application/server/package.json
+++ b/application/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.705.0",
     "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-converter": "^4.22.0",
@@ -26,14 +27,15 @@
     "cors": "^2.8.5",
     "cron": "^3.2.1",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "ml-pca": "^4.1.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "node-fetch": "^2.7.0",
@@ -48,7 +50,8 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.5.5",
+    "@types/multer-s3": "^3.0.3",
+    "@types/node": "^22.10.1",
     "@types/node-fetch": "^2.6.11",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
